kubernetes/production/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-manager-api
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 22335
      targetPort: 22335
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: minecraft-server-manager-api-1
  labels:
    kubernetes.io/service-name: minecraft-server-manager-api
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 22335
endpoints:
  - addresses:
      - 192.168.1.9
    conditions:
      ready: true
