kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-server-manager-website
  labels:
    route53: msm
spec:
  rules:
    - host: "msm.zgamelogic.com"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: minecraft-server-manager-api
                port:
                  number: 22335
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-server-manager-website
                port:
                  number: 3000
  tls:
    - hosts:
        - "msm.zgamelogic.com"
      secretName: ingress-tls
